Added decorative bedrock.

--- a/src/main/resources/assets/jacksdecorations/lang/en_us.json
+++ b/src/main/resources/assets/jacksdecorations/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "block.jacksdecorations.decorative_spawner": "Decorative Spawner",
+  "block.jacksdecorations.decorative_bedrock": "Decorative Bedrock",
 
   "itemgroup.jacksdecorations": "Jack's Decorations"
 }
