--- a/src/main/resources/assets/jacksdecorations/lang/zh_cn.json
+++ b/src/main/resources/assets/jacksdecorations/lang/zh_cn.json
@@ -1,6 +1,6 @@
 {
   "block.jacksdecorations.decorative_spawner": "装饰刷怪笼",
+  "block.jacksdecorations.decorative_bedrock": "装饰基岩",
 
   "itemgroup.jacksdecorations": "豪猪的装饰方块"
-
 }
