--- a/src/main/resources/assets/jacksdecorations/lang/en_us.json
+++ b/src/main/resources/assets/jacksdecorations/lang/en_us.json
@@ -2,6 +2,8 @@
   "block.jacksdecorations.decorative_spawner": "Decorative Spawner",
   "block.jacksdecorations.decorative_bedrock": "Decorative Bedrock",
   "block.jacksdecorations.decorative_barrier": "Decorative Barrier",
+  "block.jacksdecorations.decorative_reinforced_deepslate": "Decorative Reinforced Deepslate",
+  "block.jacksdecorations.decorative_command_block": "Decorative Command Block",
 
   "itemgroup.jacksdecorations": "Jack's Decorations",
 
@@ -9,8 +11,12 @@
   "advancements.decorate.root.title": "Start Decorating!",
   "advancements.decorate.decorative_spawner.description": "Is a non-spawning spawner still a spawner?",
   "advancements.decorate.decorative_spawner.title": "A Spawner! But... does it spawn?",
-  "advancements.decorate.decorative_bedrock.description": "Hey bedrock, your unbreakable days are over(but it's still hard).",
+  "advancements.decorate.decorative_bedrock.description": "Hey bedrock, your unbreakable days are over (but it's still hard).",
   "advancements.decorate.decorative_bedrock.title": "Is this a bedrock?",
   "advancements.decorate.decorative_barrier.description": "You can't see it anymore after you placed it XD.",
-  "advancements.decorate.decorative_barrier.title": "The so-called invisible bedrock"
+  "advancements.decorate.decorative_barrier.title": "The So-called Invisible Bedrock",
+  "advancements.decorate.decorative_reinforced_deepslate.description": "This can build a brand new portal in the ancient city!",
+  "advancements.decorate.decorative_reinforced_deepslate.title": "Knowledge from the Ancient City",
+  "advancements.decorate.decorative_command_block.description": "Can I use this? Can I?",
+  "advancements.decorate.decorative_command_block.title": "Bruce Almighty"
 }
